--- a/templates/scoreboard.xml
+++ b/templates/scoreboard.xml
@@ -1,3 +1,22 @@
-<fest:template xmlns:fest="http://fest.mail.ru">
-    <div id="scoreboard"></div>
+<fest:template xmlns:fest="http://fest.mail.ru" context_name="json">
+
+    <fest:include context="json.list" src="./back_button.xml"/>
+    <div id="scoreboard">
+        <div class="header">
+            <h1>Scoreboard</h1>
+        </div>
+        <table>
+            <fest:for iterate="json" index="i" value="v">
+                 <tr>
+                 <td><div class="scoreboard__elem">
+                    <fest:value>v.username</fest:value>
+                    <!-- abc -->
+                 </div></td>>
+                 <td> <div class="scoreboard__elem">
+                     <fest:value>v.score</fest:value>
+                 </div></td>
+                 </tr>
+        </fest:for>
+        </table>
+    </div>
 </fest:template>
