--- a/templates/login.xml
+++ b/templates/login.xml
@@ -1,5 +1,5 @@
 <fest:template xmlns:fest="http://fest.mail.ru">
-    <fest:include context="json.list" src="./back_button.xml"/>
+    <fest:include  src="./back_button.xml"/>
     <div id="login">
         <div class="header">
             <h1>SignIn</h1>
