--- a/templates/main.xml
+++ b/templates/main.xml
@@ -7,14 +7,22 @@
         <div class="header">
             <h1>EpicArkanoid</h1>
         </div>
-        <div class="main__elem js-scoreboard">
-            Score board
-        </div>
-        <div class="main__elem js-start-game">
-            Start Game.
-        </div>
-        <div class="main__elem js-login">
-            Login
+        <div id ="main__container">
+            <a href="#scoreboard">
+            <div class="main__container__elem js-scoreboard">
+                Score board
+            </div>
+            </a>
+            <a href="#game">
+            <div  class="main__container__elem js-start-game">
+                Start Game.
+            </div>
+            </a>
+            <a href="#login">
+            <div class="main__container__elem js-login">
+                Login
+            </div>
+            </a>
         </div>
     </div>
 
