--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -1,4 +1,5 @@
 /* TODO */
+html { overflow: hidden; }
 #page
 {
 
@@ -8,7 +9,7 @@
     height: 100vh;
     background-size: 100%, 100%;
 }
-#main, #scoreboard, #login
+#main, #scoreboard, #login,#game
 {
     overflow: hidden;
     position: absolute;
@@ -84,7 +85,7 @@
     vertical-align: middle;
     /* padding-top: 4%;
      padding-bottom: 4%;*/
-    margin-top: 1%;
+    /*margin-top: 1%;*/
     overflow:hidden;
 }
 table
@@ -127,3 +128,18 @@ table
     font-size: 7vh;
 }
 
+#game__canvas
+{
+    border-color: #E9DC51;
+    border-style: solid;
+    border-width: 2px;
+    padding-left: 0;
+    padding-right: 0;
+    /*margin-left: auto;
+    margin-right: auto*/;
+    width:98%;
+    left:1%;
+    right:1%;
+    position:absolute;
+    display: block; /*width: 95vw;*/
+}
