--- a/templates/login.xml
+++ b/templates/login.xml
@@ -4,12 +4,16 @@
         <div class="header">
             <h1>SignIn</h1>
         </div>
-        <form class="login__form" action="/api/v1/auth/signin" method="POST">
-            <input class="login__form__input-field" name="login" type="text" size="25"
-                                maxlength="30" value="" placeholder="Username" />
-            <input class="login__form__input-field"  name="pd" type="password"
+        <form class="login__form" name="login" action="/api/v1/auth/signin" method="POST">
+            <input class="login__form__input-field" name="email" type="text" size="25"
+                                maxlength="30" value="" placeholder="Email" />
+            <input class="login__form__input-field"  name="password" type="password"
                     size="25" maxlength="30" value="" placeholder="Password" />
             <input class="login__form__submit" type="submit" name="enter" value="Signin" />
-        </form>.
+
+            <div id="form__error-block">
+            </div>
+        </form>
+
     </div>
 </fest:template>
