Добавлена форма регистрации. Немного изменены стили и шаблоны

--- a/templates/login.xml
+++ b/templates/login.xml
@@ -1,6 +1,7 @@
 <fest:template xmlns:fest="http://fest.mail.ru">
-    <fest:include  src="./back_button.xml"/>
+
     <div id="login">
+        <fest:include  src="./back_button.xml"/>
         <div class="header">
             <h1>SignIn</h1>
         </div>
@@ -9,7 +10,7 @@
                                 maxlength="30" value="" placeholder="Email" />
             <input class="login__form__input-field"  name="password" type="password"
                     size="25" maxlength="30" value="" placeholder="Password" />
-            <input class="login__form__submit" type="submit" name="enter" value="Signin" />
+            <input class="login__form__submit form-submit" type="submit" name="enter" value="Signin" />
 
             <div id="form__error-block">
             </div>
