--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -13,23 +13,24 @@ a {
     height: 100vh;
     background-size: 100%, 100%;
 }
-#main, #scoreboard, #login,#game
+#main, #scoreboard, #login,#game, #registration
 {
     overflow: hidden;
     position: absolute;
-    width: 90%;
-    height: 90%;
-    left: 5%;
+    width: 100%;
+    height: 100%;
+    /*left: 5%;
     right: 5%;
     top :5%;
-    bottom: 5%;
+    bottom: 5%;*/
 }
+
 .header
 {
     width: 70%;
     color:white;
     text-align: center;
-    height : 20%;
+    height : 15%;
     margin-left: 15%;
     margin-right: 15%;
     font-size:5.5vh ;
@@ -95,9 +96,12 @@ a {
     /*margin-top: 1%;*/
     overflow:hidden;
 }
-table
+#scoreboard__table
 {
-    width: 100%;
+    width: 80%;
+    left: 10%;
+    right: 10%;
+    position: absolute;
 }
 .js-back
 {
@@ -121,17 +125,19 @@ table
     height:15%;
     margin-top:2%;
     font-size: 7vh;
-    border-radius:10px;
-
+    border-radius:20px;
 }
-.login__form__submit
+.registration__form__input-field
 {
+    background-color: rgba(60, 63, 65, 0.23);
+    color: rgba(230, 248, 255, 1);
     margin-left: 10%;
     margin-right: 10%;;
     width: 80%;
-    height:15%;
-    margin-top:5%;
+    height:10%;
+    margin-top:1%;
     font-size: 7vh;
+    border-radius:0.1vh;
 }
 
 #game__canvas
@@ -143,19 +149,20 @@ table
     padding-right: 0;
     /*margin-left: auto;
     margin-right: auto*/;
-    width:98%;
-    left:1%;
-    right:1%;
+    width:90%;
+    top:10%;
+    left:5%;
+    right:5%;
     position:absolute;
     display: block; /*width: 95vw;*/
 }
 
 #form__error-block
 {
-    margin-top:10px;
-    min-width: 500px;
+    margin-top:2%;
+    width: 500px;
     min-height: 100px;
-    width:20vw;
+    width:30vw;
     height:16vh;
     display: block;
     margin-left: auto;
@@ -168,8 +175,12 @@ table
     text-align: center;
 
 }
-.login__form__submit
+
+.form-submit
 {
+    margin-left: 10%;
+    margin-right: 10%;;
+    width: 80%;
     background-color: rgba(80,200,120, 0.4);
     -moz-border-radius:28px;
     -webkit-border-radius:28px;
@@ -181,11 +192,24 @@ table
     text-decoration:none;
     text-shadow:0px 1px 0px #2f6627;
 }
-.login__form__submit:hover
+.registration__form__submit
+{
+    height:8%;
+    margin-top:2%;
+    font-size: 7vh;
+}
+.login__form__submit
+{
+    height:15%;
+    margin-top:5%;
+    font-size: 7vh;
+
+}
+.login__form__submit:hover, .registration__form__submit:hover
 {
     background-color:rgba(92,191,42, 0.4);
 }
-.login__form__submit:active
+.login__form__submit:active, .registration__form__submit:active
 {
     position:relative;
     top:1px;
