--- a/templates/scoreboard.xml
+++ b/templates/scoreboard.xml
@@ -1,16 +1,16 @@
 <fest:template xmlns:fest="http://fest.mail.ru" context_name="best_players">
-    <fest:include  src="./back_button.xml"/>
     <div id="scoreboard">
+        <fest:include  src="./back_button.xml"/>
         <div class="header">
             <h1>Scoreboard</h1>
         </div>
-        <table>
+        <table id="scoreboard__table">
             <fest:for iterate="best_players" index="i" value="v">
-                 <tr>
+                 <tr >
                  <td><div class="scoreboard__elem">
                     <fest:value>v.username</fest:value>
                     <!-- abc -->
-                 </div></td>>
+                 </div></td>
                  <td> <div class="scoreboard__elem">
                      <fest:value>v.score</fest:value>
                  </div></td>
