--- a/templates/login.xml
+++ b/templates/login.xml
@@ -6,8 +6,8 @@
             <h1>SignIn</h1>
         </div>
         <form class="login__form" name="login" action="/api/v1/auth/signin" method="POST">
-            <input class="login__form__input-field" name="email" type="text" size="25"
-                                maxlength="30" value="" placeholder="Email" />
+            <input class="login__form__input-field" name="username" type="text" size="25"
+                                maxlength="30" value="" placeholder="Username" />
             <input class="login__form__input-field"  name="password" type="password"
                     size="25" maxlength="30" value="" placeholder="Password" />
             <input class="login__form__submit form-submit" type="submit" name="enter" value="Signin" />
