--- a/templates/main.xml
+++ b/templates/main.xml
@@ -5,26 +5,41 @@
             <h1>EpicArkanoid</h1>
         </div>
         <div id ="main__container">
-            <a href="#scoreboard">
-            <div class="main__container__elem js-scoreboard">
-                Score board
-            </div>
-            </a>
-            <a href="#game">
-            <div  class="main__container__elem js-start-game">
-                Start Game.
-            </div>
-            </a>
-            <a href="#login">
-            <div class="main__container__elem js-login">
-                Login
-            </div>
-            </a>
-            <a href="#registration">
-                <div class="main__container__elem js-login">
-                    Registration
-                </div>
-            </a>
+
+            <fest:if test="json.isAuth">
+                <a href="#scoreboard">
+                    <div class="main__container__elem js-scoreboard">
+                        Score board
+                    </div>
+                </a>
+                <a href="#game">
+                    <div  class="main__container__elem js-start-game">
+                        Start Game.
+                    </div>
+                </a>
+                <a href="#logout">
+                    <div class="main__container__elem js-logout">
+                        Logout
+                    </div>
+                </a>>
+            </fest:if>
+            <fest:if test="!json.isAuth">
+                <a href="#scoreboard">
+                    <div class="main__container__elem js-scoreboard">
+                        Score board
+                    </div>
+                </a>
+                <a href="#login">
+                    <div class="main__container__elem js-login">
+                        Login
+                    </div>
+                </a>
+                <a href="#registration">
+                    <div class="main__container__elem js-registration">
+                        Registration
+                    </div>
+                </a>
+            </fest:if>g
         </div>
     </div>
 
