--- a/templates/game.xml
+++ b/templates/game.xml
@@ -2,9 +2,9 @@
 <fest:template xmlns:fest="http://fest.mail.ru">
 
 
-    <div id="game">
+    <!--<div id="game">-->
         <fest:include  src="./back_button.xml"/>
         <canvas id="game__canvas" >
         </canvas>
-    </div>
+    <!--</div>-->
 </fest:template>
