--- a/templates/scoreboard.xml
+++ b/templates/scoreboard.xml
@@ -7,7 +7,7 @@
             <fest:for iterate="best_players" index="i" value="v">
                  <tr>
                  <td><div class="scoreboard__elem">
-                    <fest:value>v.username</fest:value>
+                    <fest:value>v.nickname</fest:value>
                  </div></td>
                  <td> <div class="scoreboard__elem">
                      <fest:value>v.score</fest:value>
