Добавлен canvas_wrapper. Внесены некоторые другие изменения

--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -5,7 +5,7 @@ a {
 }
 #page
 {
-    background: url("../background.png");
+    background: url("../index.jpeg");
     position: fixed;
     top:0;
     left:0;
