--- a/templates/login.xml
+++ b/templates/login.xml
@@ -1,14 +1,14 @@
 <fest:template xmlns:fest="http://fest.mail.ru">
     <fest:include  src="./back_button.xml"/>
-    <div class="header">
+    <div class="b-header">
         <h1>SignIn</h1>
     </div>
-    <form class="login__form" name="login" action="/api/v1/auth/signin" method="POST">
-        <input class="login__form__input-field" name="nickname" type="text" size="25"
+    <form class="b-login__form" name="login" action="/api/v1/auth/signin" method="POST">
+        <input class="b-login-input-field" name="nickname" type="text" size="25"
                maxlength="30" value="" placeholder="Nickname" />
-        <input class="login__form__input-field"  name="password" type="password"
+        <input class="b-login-input-field"  name="password" type="password"
                size="25" maxlength="30" value="" placeholder="Password" />
-        <input class="login__form__submit form-submit" type="submit" name="enter" value="Signin" />
+        <input class="b-submit b-submit_margin form-submit" type="submit" name="enter" value="Signin" />
         <div id="form__error-block">
         </div>
     </form>
