--- a/templates/main.xml
+++ b/templates/main.xml
@@ -1,38 +1,38 @@
 <fest:template xmlns:fest="http://fest.mail.ru" context_name="json">
-    <div class="header">
+    <div class="b-header">
         <h1>EpicArkanoid</h1>
     </div>
-    <div id ="main__container">
+    <div class ="container">
         <fest:if test="json.isAuth">
-            <a href="#scoreboard">
-                <div class="main__container__elem js-scoreboard">
+            <a class ="no-text-decoration" href="#scoreboard">
+                <div class="b-main__text-block b-main__text-block_position js-scoreboard">
                     Score board
                 </div>
             </a>
             <a href="#game">
-                <div  class="main__container__elem js-start-game">
+                <div  class="b-main__text-block b-main__text-block_position js-start-game">
                     Start Game.
                 </div>
             </a>
             <a href="#logout">
-                <div class="main__container__elem js-logout">
+                <div class="b-main__text-block b-main__text-block_position js-logout">
                     Logout
                 </div>
-            </a>>
+            </a>
         </fest:if>
         <fest:if test="!json.isAuth">
             <a href="#scoreboard">
-                <div class="main__container__elem js-scoreboard">
+                <div class="b-main__text-block b-main__text-block_position js-scoreboard">
                     Score board
                 </div>
             </a>
             <a href="#login">
-                <div class="main__container__elem js-login">
+                <div class="b-main__text-block b-main__text-block_position js-login">
                     Login
                 </div>
             </a>
             <a href="#registration">
-                <div class="main__container__elem js-registration">
+                <div class="b-main__text-block b-main__text-block_position js-registration">
                     Registration
                 </div>
             </a>
