--- a/templates/registration.xml
+++ b/templates/registration.xml
@@ -1,14 +1,14 @@
 <fest:template xmlns:fest="http://fest.mail.ru">
     <fest:include  src="./back_button.xml"/>
-    <div class="header">
+    <div class="b-header">
         <h2>SignUp</h2>
     </div>
-    <form class="b-registration__form js-signup" name="register" action="/api/v1/auth/signin" method="POST">
+    <form class="b-signup-form js-signup-form" name="register" action="/api/v1/auth/signin" method="POST">
         <input class="b-signup-form__input b-signup-form__input_position" name="email" type="text" size="25"
                maxlength="30" value="" placeholder="Email" />
         <input class="b-signup-form__input b-signup-form__input_position" name="nickname" type="text" size="25"
                maxlength="30" value="" placeholder="Nickname" />
-        <input class="b-signup-form__input b-signup-form__input-position"  name="password" type="password"
+        <input class="b-signup-form__input b-signup-form__input_position"  name="password" type="password"
                size="25" maxlength="30" value="" placeholder="Password" />
         <input class="b-signup-form__input b-signup-form__input_position"  name="password2" type="password"
                size="25" maxlength="30" value="" placeholder="Repeat password" />
