--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -1,6 +1,19 @@
 .b-back {
   float: left; }
 
+.b-canvas {
+  border-color: #E9DC51;
+  border-style: solid;
+  border-width: 2px;
+  padding-left: 0;
+  padding-right: 0;
+  width: 90%;
+  top: 10%;
+  left: 5%;
+  right: 5%;
+  position: absolute;
+  display: block; }
+
 .b-error-block {
   margin-top: 2%;
   min-height: 100px;
@@ -91,12 +104,6 @@ a {
       cursor: pointer;
       background-color: rgba(68, 85, 136, 0.31); }
 
-.b-page {
-  position: fixed;
-  width: 100vw;
-  height: 100vh;
-  background: url("../img/castle.png"); }
-
 .b-scoreboard-table {
   width: 80%; }
   .b-scoreboard-table_position-centred {
@@ -116,7 +123,10 @@ a {
     overflow: hidden; }
 
 .b-view-container {
+  background-size: 100%;
   position: fixed;
-  width: 100%;
-  height: 100%;
-  background-size: 100%; }
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  background: url("../img/background.png"); }
