--- a/public_html/sass/view_container.scss
+++ b/public_html/sass/view_container.scss
@@ -1,6 +1,9 @@
 .b-view-container{
-  position: fixed;
-  width: 100%;
-  height: 100%;
   background-size: 100%;
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  top:0;
+  left:0;
+  background: url("../img/background.png");
 }
