--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -123,10 +123,11 @@ a {
     overflow: hidden; }
 
 .b-view-container {
-  background-size: 100%;
+  background: url("../img/background.png");
+  -moz-background-size: 100%;
   position: fixed;
-  width: 100vw;
-  height: 100vh;
   top: 0;
   left: 0;
-  background: url("../img/background.png"); }
+  width: 100vw;
+  height: 100vh;
+  background-size: cover; }
