--- a/public_html/sass/view_container.scss
+++ b/public_html/sass/view_container.scss
@@ -1,9 +1,10 @@
-.b-view-container{
-  background-size: 100%;
+.b-view-container {
+  background: url("../img/background.png");
+  -moz-background-size: 100%;
   position: fixed;
-  width: 100vw;
-  height: 100vh;
   top:0;
   left:0;
-  background: url("../img/background.png");
+  width: 100vw;
+  height: 100vh;
+  background-size: cover;
 }
